--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -7,7 +7,7 @@
     $paragraph: #1b2d45;
     $button: #00ebc7;
     $buttonText: #00214d;
-    
+    $pinky: #ff5470;
     body {
         
         background-color: $base-color;
