--- a/assets/sass/pages/hero.scss
+++ b/assets/sass/pages/hero.scss
@@ -3,12 +3,11 @@
 
 
 .hero {
-    
     padding: 0 30px;
 }
 
 nav {
-    background-color: #ff5470;
+    background-color: $pinky;
     width: 100%;
     height: 10vh;
     display: flex;
@@ -26,4 +25,17 @@ nav {
     margin: auto;
     border: 5px solid #fde24f;
     margin-bottom: 20px;
+    position: relative;
+    padding: 5px;
 }
+
+.highlight {
+background-color: $pinky;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+
+/////////----Our Story-----////////
