--- a/assets/sass/typography.scss
+++ b/assets/sass/typography.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-
 @import './base.scss';
 
 .headline-text {
@@ -18,4 +17,5 @@
     font-size: 1rem;
     padding: 10px 0;
     line-height: 1.5;
+    color: $paragraph;
 }
