--- a/assets/sass/pages/hero.scss
+++ b/assets/sass/pages/hero.scss
@@ -3,7 +3,14 @@
 
 
 .hero {
-    padding: 0 30px;
+    padding: 60px 30px;
+    .headline-text ::after {
+        position: absolute;
+        content: '';
+        width: 50px;
+        height: 10px;
+        background-color: red;
+    }
 }
 
 nav {
@@ -11,9 +18,14 @@ nav {
     width: 100%;
     height: 10vh;
     display: flex;
-
+    // position: fixed;
+    // top: 0;
+    // left: 0;
+    // right: 0;
+    // bottom: 0;
+    // z-index: 1;
     .logo {
-        width: 100px;
+        width: 75px;
         height: 100%;
         margin: auto;
     }
@@ -39,3 +51,67 @@ background-color: $pinky;
 
 
 /////////----Our Story-----////////
+.ourStory {
+    padding: 60px 30px;
+    border-top: 5px solid #000;
+
+    .headline-text {
+        margin-bottom: 30px;
+    }
+
+    img {
+        width: 100%;
+    }
+}
+
+
+/////////----Safety-----////////
+.safety {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    .subtext {
+        margin-bottom: 150px;
+    }
+
+    .pattern-diagonal-lines-md {
+        border-top: 5px solid #000;
+        color: #e7e0e0bf;
+    }
+
+
+    .boldie {
+        display: block;
+        font-weight: bold;
+        color: #1b2d45;
+        font-family: "Montserrat", sans-serif;
+        font-size: 1rem;
+        margin-bottom: -10px;
+    }
+}
+
+.pd-30 {
+    padding: 60px 30px;
+}
+
+.cats {
+    width: 200px;
+}
+
+.ulta-cat {
+    width: 176px;
+    position: absolute;
+    top: 18px;
+    left: 0;
+    transform: rotate(-24deg);
+}
+
+.cat-btm {
+    position: absolute;
+    bottom: 0;
+    width: 100px;
+    right: 50px;
+    transform: rotateY(180deg);
+
+}
