--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -1,20 +1,24 @@
-    * {
-        box-sizing: border-box;
-    }
-    //---Variables---//
-    $base-color: #fffffe;
-    $headline:  #00214d;
-    $paragraph: #1b2d45;
-    $button: #00ebc7;
-    $buttonText: #00214d;
-    $pinky: #ff5470;
-    body {
-        
-        background-color: $base-color;
-        margin: 0;
-        padding: 0;
-        font-size: 62.5%;//1 rem 10px
-    }
+* {
+    box-sizing: border-box;
+}
 
+html {
+    scroll-behavior: smooth;
+}
 
-    
+//---Variables---//
+$base-color: #fffffe;
+$headline: #00214d;
+$paragraph: #1b2d45;
+$button: #00ebc7;
+$buttonText: #00214d;
+$pinky: #ff5470;
+
+body {
+    width: 100%;
+    overflow-x: hidden;
+    background-color: $base-color;
+    margin: 0;
+    padding: 0;
+    font-size: 62.5%; //1 rem 10px
+}
