--- a/assets/sass/pages/hero.scss
+++ b/assets/sass/pages/hero.scss
@@ -16,7 +16,9 @@
 nav {
     // background-color: $pinky;
     background-color: #fde24fe0;
-    border-bottom: 2px solid;
+    // border-bottom: 2px solid;
+    border-bottom-right-radius: 50px;
+    border-bottom-left-radius: 50px;
     width: 100%;
     display: flex;
     padding: 0 20px;
@@ -28,7 +30,7 @@ nav {
     // bottom: 0;
     // z-index: 1;
     .logo {
-        width: 75px;
+        width: 100px;
         height: 100%;
     /* margin: auto; */
     }
@@ -75,7 +77,7 @@ background-color: $pinky;
     position: relative;
 
     .subtext {
-        margin-bottom: 150px;
+        // margin-bottom: 150px;
     }
 
     .pattern-diagonal-lines-md {
