--- a/assets/sass/pages/fresh.scss
+++ b/assets/sass/pages/fresh.scss
@@ -133,6 +133,7 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
     align-items: center;
+    padding: 30px 0;
 
     .contact-box {
         background: $button;
